2014-07-02  Henri Doreau <henri.doreau@gmail.com>

	* src/openvassd (main): Removed clumsy and unneeded string duplication.

2014-07-02  Henri Doreau <henri.doreau@gmail.com>

	* src/openvassd.c (global_options): Change type to GHashTable.
	(arg_replace_value): Removed unused function.
	(main_loop, init_plugins, init_openvassd, main): Update operations on
	global_options and function prototypes accordingly.

2014-07-02  Henri Doreau <henri.doreau@gmail.com>

	* src/openvassd.c (global_options): Renamed variable for consistency.
	(global_iana_socket, global_plugins, global_preferences, global_options)
	(reload, loading_stop, ovas_scanner_ctx ): Mark as static and removed
	superfluous initializations.

2014-07-01  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (gcrypt_init): New function.
	(main): Initialize libgcrypt.

	* CMakeLists.txt (GCRYPT_LDFLAGS, GCRYPT_CFLAGS): New variables.

	* src/CMakeLists.txt: Link against libgcrypt.

2014-06-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (forward), src/pluginlaunch.c (process_internal_msg): Fix
	memory leaks.

2014-06-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* tools/openvas-mkcert.in, tools/openvas-mkcert-client.in: Sign
	certificates with SHA-256 instead of SHA1.

2014-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (main): Better term for help info: "filename"
	instead of "rcfile" which was misleading.

2014-06-06  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync (init_sync): Ensure FEED_CURRENT is
	initialized.
	(do_sync): Remove superfluous and potentially confusing log messages.
	A synchronization may or may not take place in do_sync. If it takes
	place, sync_nvts will log more accurate messages anyway.

2014-06-05  Henri Doreau <henri.doreau@gmail.com>

	* src/openvassd.c (main): Replaced kb_flush() by flush_all_kbs().
	(flush_all_kbs): new function. Initialize a KB handle and flush all
	entries.
